--- a/history/preliminary/pom.xml
+++ b/history/preliminary/pom.xml
@@ -54,7 +54,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.weibo.taihejin.WordCount</mainClass>
+                                    <mainClass>com.weibo.taihejin.diff.JobScheduler</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
