--- a/history/preliminary/pom.xml
+++ b/history/preliminary/pom.xml
@@ -19,23 +19,29 @@
             <scope>test</scope>
         </dependency>
         <!-- for hadoop dependencies -->
-        <!--
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-        </dependency> -->
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
         </dependency>
-        <!--
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-        </dependency> -->
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-mapreduce-client-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
         </dependency>
     </dependencies>
 
@@ -54,7 +60,10 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.weibo.taihejin.diff.JobScheduler</mainClass>
+                                    <!--<mainClass>com.weibo.taihejin.diff.JobScheduler</mainClass>-->
+                                    <!--<mainClass>com.weibo.taihejin.explore.URLCat</mainClass>-->
+                                    <!--<mainClass>com.weibo.taihejin.explore.FileSystemCat</mainClass>-->
+                                    <mainClass>com.weibo.taihejin.explore.FileSystemDoubleCat</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
